Suave-c2-main/C2/Suave Web Server/bin/Debug/net8.0/clients/192.168.73.128_61423_DESKTOP-K85SJO9_log.txt
25/07/2024 6:45:30 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 6:45:42 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 6:45:53 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 6:46:05 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 6:46:16 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:11:15 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:11:27 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:11:38 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:11:50 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:12:01 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:12:13 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:53:44 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 7:53:56 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> 
Script Errors:

  /ARPScanner.txt
  ^

stdin(1,1): error FS0010: Unexpected infix operator in interaction


25/07/2024 8:13:39 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:15:17 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:15:29 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:15:41 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:15:53 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:16:05 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

25/07/2024 8:16:17 PM: Script Output:

Microsoft (R) F# Interactive version 12.8.301.0 for F# 8.0
Copyright (c) Microsoft Corporation. All Rights Reserved.

For help type #help;;

> ARP Table:

Interface: 192.168.73.128 --- 0x7
  Internet Address      Physical Address      Type
  192.168.73.2          00-50-56-f8-8d-4d     dynamic   
  192.168.73.254        00-50-56-e4-76-b1     dynamic   
  192.168.73.255        ff-ff-ff-ff-ff-ff     static    
  224.0.0.22            01-00-5e-00-00-16     static    
  224.0.0.251           01-00-5e-00-00-fb     static    
  224.0.0.252           01-00-5e-00-00-fc     static    
  239.255.255.250       01-00-5e-7f-ff-fa     static    
  255.255.255.255       ff-ff-ff-ff-ff-ff     static    

val getArpTable: unit -> string
val displayArpTable: unit -> unit
val it: unit = ()


Script Errors:

